ben's session